--- a/index.html
+++ b/index.html
@@ -1,193 +1,116 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Be My Valentine?</title>
+    <style>
+        /* Styling the background and layout */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); /* Purple/Blue Gradient */
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
+            overflow: hidden;
+            text-align: center;
+        }
 
-<meta charset="UTF-8">
+        .container {
+            z-index: 1;
+        }
 
-<title>Valentine 💖</title>
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 30px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+        }
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        .buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            align-items: center;
+        }
 
-<style>
+        /* Button Styles */
+        button {
+            padding: 15px 35px;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: transform 0.2s;
+            font-weight: bold;
+        }
 
-body {
+        #yesBtn {
+            background-color: #ff4d6d;
+            color: white;
+            box-shadow: 0 4px 15px rgba(255, 77, 109, 0.4);
+        }
 
-margin: 0;
+        #noBtn {
+            background-color: #ffffff;
+            color: #333;
+            position: absolute; /* Essential for the 'running away' effect */
+        }
 
-height: 100vh;
+        /* Success Message Styling */
+        #success-message {
+            display: none; /* Hidden initially */
+        }
 
-background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-
-display: flex;
-
-justify-content: center;
-
-align-items: center;
-
-font-family: Arial, sans-serif;
-
-overflow: hidden;
-
-}
-
-.card {
-
-background: white;
-
-padding: 30px;
-
-border-radius: 20px;
-
-text-align: center;
-
-box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-
-width: 90%;
-
-max-width: 350px;
-
-position: relative;
-
-}
-
-h1 {
-
-color: #ff4d6d;
-
-margin-bottom: 25px;
-
-}
-
-button {
-
-padding: 12px 25px;
-
-font-size: 16px;
-
-border: none;
-
-border-radius: 25px;
-
-cursor: pointer;
-
-}
-
-.yes {
-
-background: #ff4d6d;
-
-color: white;
-
-}
-
-.no {
-
-background: #ddd;
-
-position: absolute;
-
-left: 20px;
-
-top: 120px;
-
-}
-
-</style>
-
+        .heart-emoji {
+            font-size: 5rem;
+            display: block;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
-
 <body>
 
+    <div id="question-section" class="container">
+        <div class="heart-emoji">💝</div>
+        <h1>Will you be my Valentine, Gaurav?</h1>
+        <div class="buttons">
+            <button id="yesBtn" onclick="showSuccess()">Yes!</button>
+            <button id="noBtn" onmouseover="moveButton()">No</button>
+        </div>
+    </div>
 
-<div class="card">
+    <div id="success-message" class="container">
+        <div class="heart-emoji">🎉❤️</div>
+        <h1>I knew you'd say yes!</h1>
+        <p style="font-size: 1.5rem;">You just made me the happiest!<br>I love you!</p>
+    </div>
 
-<h1>💘 Dolly, will you be my Valentine? 💘</h1>
+    <script>
+        // Function to move the "No" button randomly
+        function moveButton() {
+            const noBtn = document.getElementById('noBtn');
+            
+            // Calculate random positions within the window
+            // Subtracting button width/height so it doesn't go off-screen
+            const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+            const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
 
-<button class="yes" onclick="yesClick()">Yes ❤️</button>
+            noBtn.style.left = ${x}px;
+            noBtn.style.top = ${y}px;
+        }
 
-<button class="no" id="noBtn">No 😢</button>
-
-</div>
-
-
-<script>
-
-const noBtn = document.getElementById("noBtn");
-
-const card = document.querySelector(".card");
-
-
-function randomMove() {
-
-const maxX = card.clientWidth - noBtn.offsetWidth;
-
-const maxY = card.clientHeight - noBtn.offsetHeight;
-
-
-const x = Math.random() * maxX;
-
-const y = Math.random() * maxY;
-
-
-noBtn.style.left = x + "px";
-
-noBtn.style.top = y + "px";
-
-}
-
-
-// No button keeps moving
-
-setInterval(randomMove, 700);
-
-
-function yesClick() {
-
-document.body.innerHTML = `
-
-<div style="
-
-display:flex;
-
-flex-direction:column;
-
-justify-content:center;
-
-align-items:center;
-
-height:100vh;
-
-background:#ff9a9e;
-
-color:white;
-
-text-align:center;
-
-padding:20px;
-
-">
-
-<h1>💖 Yayyy Dolly! I knew it 😍💖</h1>
-
-<img
-
-src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
-
-alt="Dancing girl"
-
-style="width:250px; margin-top:20px; border-radius:20px;"
-
->
-
-</div>`;
-
-}
-
-</script>
-
-
+        // Function to switch screens
+        function showSuccess() {
+            document.getElementById('question-section').style.display = 'none';
+            document.getElementById('success-message').style.display = 'block';
+            
+            // Optional: Change background color on success
+            document.body.style.background = "linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%)";
+        }
+    </script>
 </body>
-
 </html>
